--- a/README.Rmd
+++ b/README.Rmd
@@ -1,24 +1,35 @@
+---
+output:
+  github_document:
+    html_preview: false
+---
 
 <!-- README.md is generated from README.Rmd. Please edit that file -->
-remake tutorial
-===============
+
+```{r, echo = FALSE}
+knitr::opts_chunk$set(
+  collapse = TRUE,
+  comment = "#>",
+  fig.path = "README-"
+)
+```
+
+# remake tutorial
 
 Please see the README files in the individual subdirectories.
 
-Prerequisites
--------------
+## Prerequisites
 
-``` r
+```r
 install.packages("remotes") # if not yet installed
 remotes::install_github(c("richfitz/remake", "krlmlr/cooking"))
 ```
 
-Test
-----
+## Test
 
 Run in a fresh R session, this should complete without error:
 
-``` r
+```{r}
 test <- function() {
   temp_dir <- tempfile()
   dir.create(temp_dir)
@@ -35,21 +46,14 @@ test <- function() {
 }
 
 test()
-#> [  LOAD ]
-#> [  READ ]              |  # loading sources
-#> <  MAKE > all
-#> [ BUILD ] chopped_meat |  chopped_meat <- chop("raw_meat.csv")
-#> [  READ ]              |  # loading packages
-#> [ ----- ] all
 ```
 
-Contents
---------
+## Contents
 
-1.  [The basics](01-basics)
-2.  [Adding spice](02-spice)
-3.  [How to prepare vegetables?](03-vegetables)
-4.  [Where to buy?](04-supermarket)
-5.  [Working with `remake` projects](05-editing)
-6.  [Marinating the meat](06-custom)
-7.  [A tofu ragout](07-tofu)
+1. [The basics](01-basics)
+1. [Adding spice](02-spice)
+1. [How to prepare vegetables?](03-vegetables)
+1. [Where to buy?](04-supermarket)
+1. [Working with `remake` projects](05-editing)
+1. [Marinating the meat](06-custom)
+1. [A tofu ragout](07-tofu)
