--- a/README.Rmd
+++ b/README.Rmd
@@ -56,4 +56,5 @@ test()
 1. [Where to buy?](04-supermarket)
 1. [Working with `remake` projects](05-editing)
 1. [Marinating the meat](06-custom)
-1. [A tofu ragout](07-tofu)
+1. [Reporting](07-knitr)
+1. [A tofu ragout](08-tofu)
