--- a/README.Rmd
+++ b/README.Rmd
@@ -59,3 +59,4 @@ test()
 1. [Marinating the meat](06-custom)
 1. [Reporting](07-knitr)
 1. [A tofu ragout](08-tofu)
+1. [Further steps](09-freeride)
