--- a/README.Rmd
+++ b/README.Rmd
@@ -16,15 +16,15 @@ knitr::opts_chunk$set(
 
 # remake tutorial
 
-1. [The basics](01-basics)
-1. [Adding spice](02-spice)
-1. [How to prepare vegetables?](03-vegetables)
-1. [Where to buy?](04-supermarket)
-1. [Working with `remake` projects](05-editing)
-1. [Marinating the meat](06-custom)
-1. [Reporting](07-knitr)
-1. [A tofu ragout](08-tofu)
-1. [Further steps](09-freeride)
+1. [The basics](01-basics#readme)
+1. [Adding spice](02-spice#readme)
+1. [How to prepare vegetables?](03-vegetables#readme)
+1. [Where to buy?](04-supermarket#readme)
+1. [Working with `remake` projects](05-editing#readme)
+1. [Marinating the meat](06-custom#readme)
+1. [Reporting](07-knitr#readme)
+1. [A tofu ragout](08-tofu#readme)
+1. [Further steps](09-freeride#readme)
 
 ## Prerequisites
 
